--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -34,7 +34,7 @@
             </div>
             <div class="box">
                 <div class="box-header">
-                    <h4>Overall UX, Widget System, REST API Implementation and Course Map Tool</h4>
+                    <h4>Overall UX, Widget System, REST API Implementation and CourseMapper Tool</h4>
                 </div>
                 <div class="box-body">
                     <div class="row">
@@ -47,7 +47,8 @@
 
                             Tool to collaboratively organise lecture materials, visualised as a mind-map view of the
                             course that lets users organize the course topics in a map-based form where each node
-                            contains a lecture video or slides (PDF).
+                            contains a lecture video or slides (PDF) -> A tool to collaboratively organise pdf and video
+                            lecture materials as a mind-map.
                         </div>
                     </div>
                 </div>
@@ -62,7 +63,8 @@
                             <img src="/img/pdf.png" style="width:100%">
                         </div>
                         <div class="col-xs-12 col-sm-6">
-                            Implemented by J. Klöckner and I. Dimitrialis.<br>
+                            Implemented by J. Klöckner and I. Dimitrialis.<br><br>
+                            A tool to collaboratively annotate PDF lecture materials.
 
                         </div>
                     </div>
@@ -72,14 +74,14 @@
             </div>
             <div class="box">
                 <div class="box-header">
-                    <h4>Video Viewer and Annotation tools</h4></div>
+                    <h4>Video Viewer and Annotation Tool</h4></div>
 
                 <div class="box-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6">Implemented by M. Marinov.<br>
-
+                        <div class="col-xs-12 col-sm-6">Implemented by M. Marinov.<br><br>
+                            A tool to collaboratively annotate video lecture materials.
                         </div>
                     </div>
                 </div>
@@ -96,9 +98,12 @@
                         <div class="col-xs-12 col-sm-6">
                             Implemented by Z. Sofyan. <br><br>
 
-                            Feature in the CourseMapper that provides analytics function in the various location to
-                            help teacher and participants achieve learning objectives such as monitoring courses/course materials and the activity happened inside the platform,
-                            gives content awareness, provides feedback and course/material recommendation, also to reflect and motivate learning progress of each participant.
+                            Feature in the CourseMapper that provides analytics function in the various location to help
+                            teacher and participants achieve learning objectives such as monitoring courses/course
+                            materials and the activity happened inside the platform, gives content awareness, provides
+                            feedback and course/material recommendation, also to reflect and motivate learning progress
+                            of each participant.-> Different analytics widgets to support monitoring, awareness,
+                            self-reflection, motivation, feedback, and recommendation in CourseMapper.
 
                         </div>
                     </div>
@@ -110,50 +115,52 @@
                 <div class="box-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                            <img src="/img/footprint.png">
-                            </div>
-                                <div class="col-xs-12 col-sm-6"> Implemented by S. Oleksandr<br> <br>
-                                    Visual Learning Analytics with heatmaps that can improve interaction with learning materials and support users.
-                                    As a plugin on a video player and embedded PDF reader, users can see which part of a content that are viewed most.
-                                </div>
-                            </div>
+                            <img src="/img/footprint.png" style="width: 100%">
+                        </div>
+                        <div class="col-xs-12 col-sm-6"> Implemented by S. Oleksandr<br> <br>
+                            Visual Learning Analytics with heatmaps that can improve interaction with learning materials
+                            and support users.
+                            As a plugin on a video player and embedded PDF reader, users can see which part of a content
+                            that are viewed most.
                         </div>
                     </div>
-                    <div class="box">
-                        <div class="box-header"><h4>Past Team Members</h4>
-                        </div>
-                        <div class="box-body">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6">
-                                    <ul>
-                                        <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="box-header"><h4>Technologies</h4>
-                        </div>
-                        <div class="box-body">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6">
-                                    <ul>
-                                        <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
-                                        <li>MongoDB, Mongoose</li>
-                                        <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
-                                        <li>GridStack, JSPlumb, QuillJS</li>
-                                        <li>Angular and many others</li>
-                                        <li>PDF.js</li>
-                                        <li>Videogular</li>
-                                        <li>FootprintJS</li>
-                                        <li>ChartJS</li>
-                                    </ul>
-                                </div>
-                            </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-header"><h4>Past Team Members</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <ul>
+                                <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)
+                                </li>
+                            </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-header"><h4>Technologies</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <ul>
+                                <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
+                                <li>MongoDB, Mongoose</li>
+                                <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
+                                <li>GridStack, JSPlumb, QuillJS</li>
+                                <li>Angular and many others</li>
+                                <li>PDF.js</li>
+                                <li>Videogular</li>
+                                <li>FootprintJS</li>
+                                <li>ChartJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </div><!-- ./wrapper -->
