fix relative date

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -18,6 +18,7 @@
 <script src="/bower/angular-route/angular-route.min.js"></script>
 <script src="/bower/angular-animate/angular-animate.min.js"></script>
 <script src="/bower/angular-cookies/angular-cookies.min.js"></script>
+<script src="/bower/angular-relative-date/dist/angular-relative-date.min.js"></script>
 <script src="/angular/bootstrap-colorpicker-module.js"></script>
 
 <script src="/bower/quill/dist/quill.min.js"></script>
