fix info page, fix unable to set widget position

--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -98,11 +98,7 @@
                         <div class="col-xs-12 col-sm-6">
                             Implemented by Z. Sofyan. <br><br>
 
-                            Feature in the CourseMapper that provides analytics function in the various location to help
-                            teacher and participants achieve learning objectives such as monitoring courses/course
-                            materials and the activity happened inside the platform, gives content awareness, provides
-                            feedback and course/material recommendation, also to reflect and motivate learning progress
-                            of each participant.-> Different analytics widgets to support monitoring, awareness,
+                            Different analytics widgets to support monitoring, awareness,
                             self-reflection, motivation, feedback, and recommendation in CourseMapper.
 
                         </div>
@@ -118,10 +114,7 @@
                             <img src="/img/footprint.png" style="width: 100%">
                         </div>
                         <div class="col-xs-12 col-sm-6"> Implemented by S. Oleksandr<br> <br>
-                            Visual Learning Analytics with heatmaps that can improve interaction with learning materials
-                            and support users.
-                            As a plugin on a video player and embedded PDF reader, users can see which part of a content
-                            that are viewed most.
+                            Visual learning analytics with heatmaps as a plugin on the video player and the embedded PDF reader.
                         </div>
                     </div>
                 </div>
