--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -49,6 +49,13 @@
         <section class="content" ng-controller="profileWidgetController">
             <div class="row" id="dashboard">
 
+                <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
+                    There is no registered widget here.
+                    <span class="empty-widget">
+                      Go to the widget store to add one.
+                    </span>
+                </div>
+
                 <!-- analytics-->
                 <div class="grid-stack col-sm-12 col-md-12" id="user-profile-widgets">
                     <div class="grid-stack-item"
