--- a/views/admin-lte/settings/createExternalApp.ejs
+++ b/views/admin-lte/settings/createExternalApp.ejs
@@ -1,5 +1,5 @@
 <h3>
-    Create External Applicaiton for CourseMapper
+    Create External Application for CourseMapper
 </h3>
 <div class="row">
     <div class="col-xs-12">
