--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -45,9 +45,7 @@
                         <div class="col-xs-12 col-sm-6">
                             Implemented by R. Laksono. <br><br>
 
-                            Tool to collaboratively organise lecture materials, visualised as a mind-map view of the
-                            course that lets users organize the course topics in a map-based form where each node
-                            contains a lecture video or slides (PDF) -> A tool to collaboratively organise pdf and video
+                            A tool to collaboratively organise pdf and video
                             lecture materials as a mind-map.
                         </div>
                     </div>
