--- a/views/admin-lte/course/map/addContentNodeModal.ejs
+++ b/views/admin-lte/course/map/addContentNodeModal.ejs
@@ -151,7 +151,7 @@
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="fa fa-chain"></i></span>
                                                     <input type="url" class="form-control"
-                                                           placeholder="http://youtube.com/" ng-model="videoHostLink">
+                                                           placeholder="http://example.com" ng-model="videoHostLink">
                                                 </div>
 
                                                 <span class="error"
