--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -74,8 +74,8 @@
                         </div>
                     </div>
 
-                    <br/>
-                    <button class="btn btn-primary btn-sm pull-right"> Advanced Search</button>
+                    <!--<br/>-->
+                    <!--<button class="btn btn-primary btn-sm pull-right"> Advanced Search</button>-->
                 </div>
             </div>
         </form>
