--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -29,12 +29,12 @@
                             <br/>Please, try a different search term.
                         </span>
 
-                        <div ng-show="result.categories.length > 0">
-                            <h4>Categories:</h4>
+                        <div ng-show="result.contentNodes.length > 0">
+                            <h4>Content:</h4>
                             <ul class="list-unstyled">
-                                <li ng-repeat="category in result.categories">
-                                    <a href="/courses/#/category/{{category.slug}}">
-                                        {{category.name | cut:true:30:' ...'}}
+                                <li ng-repeat="content in result.contentNodes">
+                                    <a href="/treeNode/{{content._id}}/#/cid/{{content.courseId}}/nid/{{content._id}}">
+                                        {{content.name | cut:true:30:' ...'}}
                                     </a>
                                 </li>
                             </ul>
@@ -72,6 +72,17 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+
+                    <div ng-show="result.categories.length > 0">
+                        <h4>Categories:</h4>
+                        <ul class="list-unstyled">
+                            <li ng-repeat="category in result.categories">
+                                <a href="/courses/#/category/{{category.slug}}">
+                                    {{category.name | cut:true:30:' ...'}}
+                                </a>
+                            </li>
+                        </ul>
                     </div>
 
                     <!--<br/>-->
