--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -92,7 +92,7 @@
 
         <ul class="nav navbar-nav" ng-hide="user == null">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Favorites <span class="caret"></span></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">Favorites <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu" ng-controller="FavoritesController">
                     <li ng-show="favorites != null" ng-repeat="fav in favorites">
                         <a href="/course/{{fav.course.slug}}/#/cid/{{fav.course._id}}?tab=preview">
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li ng-show="favorites == null">
-                        <a href="#">
+                        <a href="">
                             <span>
                                 You do not have any favorite courses, yet!
                                 <br/>
